build_history.yml

--- a/.github/workflows/build_history.yml
+++ b/.github/workflows/build_history.yml
@@ -1,12 +1,12 @@
 name: Build market-history (daily)
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
   schedule:
-    - cron: "17 3 * * *"  # כל יום 03:17 UTC
+    - cron: "15 2 * * *"   # כל לילה 02:15 UTC
 
 permissions:
-  contents: write
+  contents: write   # כדי שנוכל לבצע commit
 
 jobs:
   build:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -25,14 +27,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build market-history.json
+      - name: Build history (CSV + JSON)
         run: |
           python scripts/build_history.py
+          ls -l history | cat
+          test -f market-history.json && echo "market-history.json created ✔"
 
-      - name: Commit & Push
+      - name: Commit & push
         run: |
           git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add market-history.json
-          git commit -m "chore: update market-history.json [skip ci]" || echo "No changes to commit"
-          git push
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add history/*.csv market-history.json || true
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "Update history CSVs + market-history.json"
+            git push
+          fi
