--- a/.github/workflows/build_history.yml
+++ b/.github/workflows/build_history.yml
@@ -3,44 +3,36 @@ name: Build market-history (daily)
 on:
   workflow_dispatch:
   schedule:
-    - cron: "15 2 * * *"   # כל לילה 02:15 UTC
-
-permissions:
-  contents: write   # כדי שנוכל לבצע commit
+    - cron: "15 2 * * *"   # כל יום ב-02:15 UTC
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install yfinance pandas numpy
 
-      - name: Build history (CSV + JSON)
+      - name: Run builder
         run: |
           python scripts/build_history.py
-          ls -l history | cat
-          test -f market-history.json && echo "market-history.json created ✔"
+          ls -la history
+          test -f market-history.json && echo "OK: market-history.json exists"
 
-      - name: Commit & push
-        run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add history/*.csv market-history.json || true
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "Update history CSVs + market-history.json"
-            git push
-          fi
+      - name: Commit results
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: "history/*.csv market-history.json"
+          message: "chore(history): update CSV + market-history.json"
